--- a/Samples/FNCMapsFMX/Src/Main.View.fmx
+++ b/Samples/FNCMapsFMX/Src/Main.View.fmx
@@ -377,7 +377,7 @@ object MainView: TMainView
             Size.PlatformDefault = False
             StyledSettings = [Family, Style, FontColor]
           end
-          object Button1: TButton
+          object edtRouteCalculator: TButton
             Anchors = [akTop, akRight]
             Position.X = 312.000000000000000000
             Position.Y = 61.000000000000000000
@@ -387,7 +387,7 @@ object MainView: TMainView
             TabOrder = 3
             Text = 'Go'
             TextSettings.Trimming = None
-            OnClick = Button1Click
+            OnClick = edtRouteCalculatorClick
           end
           object TMSFNCRouteCalculator1: TTMSFNCRouteCalculator
             Size.Width = 26.000000000000000000
